# Pattern-Recognition

./: cnn.ipynb  cnn.py  knn.ipynb  knn.py  pyproject.toml  utils.py
